--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="~/css/empty-states.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/enhancements.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/alignment-fixes.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/dark-theme.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Apartment.styles.css" asp-append-version="true" />
     <style>
         .main-content {
@@ -108,6 +109,7 @@
            <script src="~/js/loading-overlay.js" asp-append-version="true"></script>
            <script src="~/js/page-enhancements.js" asp-append-version="true"></script>
            <script src="~/js/site.js" asp-append-version="true"></script>
+           <script src="~/js/theme-switcher.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
