fix all the bugs

--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -503,7 +503,7 @@
         <div class="promo-container" id="promoContainer">
             <div class="promo-content">
                 <div class="promo-card">
-                    <h2>SUBO MO TITI KO</h2>
+                    <h2>HELLOOO > < vimbo </h2>
                     <p>Managing your apartment shouldn't be stressful. Our system makes every payment and room update simpler and smarter.</p>
                     <button class="btn">Learn more</button>
                     <div class="promo-image-wrapper">
