--- a/Pages/Manager/GenerateBills.cshtml
+++ b/Pages/Manager/GenerateBills.cshtml
@@ -101,7 +101,7 @@
                     </div>
                     <div class="card-body d-flex flex-column" style="flex: 1; min-height: 0;">
                         <div id="billsTable_wrapper" class="d-flex flex-column" style="flex: 1; min-height: 0;">
-                            <table class="table table-striped table-hover mb-0 data-table" id="billsTable">
+                            <table class="table table-striped table-hover mb-0 data-table data-table-manual-init" id="billsTable">
                                 <thead class="table-light">
                                     <tr>
                                         <th scope="col" style="width: 70px;">Select</th>
@@ -404,6 +404,12 @@
                                 previous: 'Previous'
                             }
                         },
+                        columns: [
+                            { orderable: false }, // Select checkbox column
+                            null,                 // Unit Number
+                            { className: "text-end" }, // Monthly Rent
+                            null                  // Current Tenant
+                        ],
                         dom: '<"row"<"col-sm-12 col-md-6"l><"col-sm-12 col-md-6"f>>rt<"row"<"col-sm-12 col-md-5"i><"col-sm-12 col-md-7"p>>',
                         drawCallback: function() {
                             // Ensure wrapper maintains flex layout
